# moos-ivp-masters

./: .gitignore  CMakeLists.txt  README  README.md  build.sh  velocity_obstacle_explanation.tex
missions/alpha_range_pulse/: alpha.bhv  alpha.moos
missions/astar/: lancha.bhv  lancha.moos  lancha_B.bhv  lancha_B.moos
missions/col_avd_moos/: lancha.bhv  lancha.moos
missions/rio/: base.moos  lancha_A.bhv  lancha_A.moos  lancha_B.bhv  lancha_B.moos
missions/rio/XLOG_BASE_4_7_2025_____16_45_27/: XLOG_BASE_4_7_2025_____16_45_27.slog
missions/rio/XLOG_BASE_4_7_2025_____16_46_05/: XLOG_BASE_4_7_2025_____16_46_05.slog
missions/rio/XLOG_BASE_6_7_2025_____01_15_18/: XLOG_BASE_6_7_2025_____01_15_18.slog
missions/vo/: lancha.bhv  lancha.moos
src/: CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.cpp  BHV_Pulse.h  CMakeLists.txt
src/pColAvd/: CMakeLists.txt  ColAvd.cpp  ColAvd.h  ColAvd_Info.cpp  ColAvd_Info.h
src/pColAvd_astar/: CMakeLists.txt  ColAvd.cpp  ColAvd.h  ColAvd_Info.cpp  main.cpp
src/pColAvd_vo/: CMakeLists.txt  ColAvd_vo.cpp  ColAvd_vo.h  ColAvd_vo_Info.cpp  ColAvd_vo_Info.h  main.cpp
src/pContactSpawn/: CMakeLists.txt  ContactSpawn.cpp  ContactSpawn.h  ContactSpawn_Info.cpp  ContactSpawn_Info.h  main.cpp
